--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vue-cli-service build",
 		"test:unit": "vue-cli-service test:unit",
 		"test:e2e": "vue-cli-service test:e2e",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
 	},
 	"dependencies": {
 		"@tailwindcss/postcss7-compat": "^2.0.2",
@@ -15,19 +16,25 @@
 		"autoprefixer": "^9",
 		"core-js": "^3.6.5",
 		"firebase": "^9.0.0",
+		"howler": "^2.2.3",
+		"nprogress": "^0.2.0",
 		"postcss": "^7",
 		"prettier": "^2.3.2",
+		"register-service-worker": "^1.7.1",
 		"tailwind": "^4.0.0",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
 		"vee-validate": "^4.4.9",
 		"vue": "^3.0.0",
+		"vue-i18n": "^9.1.0",
 		"vue-router": "^4.0.0-0",
 		"vuex": "^4.0.0-0"
 	},
 	"devDependencies": {
+		"@intlify/vue-i18n-loader": "^3.0.0",
 		"@vue/cli-plugin-babel": "~4.5.0",
 		"@vue/cli-plugin-e2e-cypress": "~4.5.0",
 		"@vue/cli-plugin-eslint": "~4.5.0",
+		"@vue/cli-plugin-pwa": "^4.5.14",
 		"@vue/cli-plugin-router": "~4.5.0",
 		"@vue/cli-plugin-unit-jest": "~4.5.0",
 		"@vue/cli-plugin-vuex": "~4.5.0",
@@ -35,11 +42,14 @@
 		"@vue/compiler-sfc": "^3.0.0",
 		"@vue/eslint-config-airbnb": "^5.0.2",
 		"@vue/test-utils": "^2.0.0-0",
+		"@vue/vue3-jest": "^27.0.0-alpha.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.7.2",
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-vue": "^7.0.0",
 		"typescript": "~3.9.3",
+		"vue-cli-plugin-i18n": "~2.3.1",
+		"vue-cli-plugin-lodash": "^0.1.4",
 		"vue-cli-plugin-tailwind": "~2.0.6",
 		"vue-jest": "^5.0.0-0"
 	}
