--- a/.github/workflows/yarn.js.yml
+++ b/.github/workflows/yarn.js.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn install --immutable
+    - run: yarn test:unit
     - run: yarn build
-    - run: yarn test
